--- a/manifest/serverless-simulaion.yaml
+++ b/manifest/serverless-simulaion.yaml
@@ -13,16 +13,16 @@ spec:
     spec:
       restartPolicy: Never
       imagePullSecrets:
-          - name: scaler-registry-secret
+          - name: scaler-secret
       containers:
       - name: scaler
         #  需要替换为选手实现的scaler镜像地址
         #  registry.cn-beijing.aliyuncs.com/cloudnative-challenge/scaler:java-v1.0为java语言的demo镜像
-        image: registry.cn-shanghai.aliyuncs.com/serverless-master/scaler:v1.2
+        image: registry-vpc.cn-beijing.aliyuncs.com/serverless-master/scaler:v2.0
         command: ["./run.sh"]
       - name: serverless-simulator
-        image: registry.cn-beijing.aliyuncs.com/cloudnative-challenge/simulator:v1.3.3
+        image: registry-vpc.cn-beijing.aliyuncs.com/cloudnative-challenge/simulator:v1.3.3
         command: ["./run.sh" ]
         # 需要替换为选手希望测试的数据集名称，数据集的名称可以参考data/data_trainning.tar.gz解压后的目录结构
         # 不填写参数时，默认会测试所有的数据集
-        args: []
+        args: ["function_smoke_test"]
