--- a/manifest/serverless-simulaion.yaml
+++ b/manifest/serverless-simulaion.yaml
@@ -20,7 +20,7 @@ spec:
         #  需要替换为选手实现的scaler镜像地址
         #  registry.cn-beijing.aliyuncs.com/cloudnative-challenge/scaler:java-v1.0为java语言的demo镜像
         # image: registry-vpc.cn-beijing.aliyuncs.com/serverless-master/scaler:v3.1.5
-        image: registry.cn-beijing.aliyuncs.com/serverless-master/scaler:v3.1.6
+        image: registry.cn-beijing.aliyuncs.com/serverless-master/scaler:v3.1.13
         command: ["./run.sh"]
       - name: serverless-simulator
         # image: registry-vpc.cn-beijing.aliyuncs.com/cloudnative-challenge/simulator:v1.3.3
@@ -28,4 +28,4 @@ spec:
         command: ["./run.sh" ]
         # 需要替换为选手希望测试的数据集名称，数据集的名称可以参考data/data_trainning.tar.gz解压后的目录结构
         # 不填写参数时，默认会测试所有的数据集
-        args: ["dataSet_2"]
+        args: ["function_smoke_test"]
